--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ host: 0.0.0.0
 
 # Site settings
 title:       "MARKIEE LLC"
-email:       "support@markiee.co"
+email:       "business@markiee.co"
 description: ""
 language:    "en" # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
 
