Update about us and LinkedIn social

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,10 @@ people:
   pic: ngocnt
   position: Co-Founder/Owner
   social:
+    - title: linkedin
+      url: www.linkedin.com/in/tanngoc93
     - title: twitter
-      url: https://twitter.com/NgocNT5/
+      url: https://x.com/tanngoc93
     - title: facebook
       url: https://www.facebook.com/profile.php?id=100055072756583
 
