--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ people:
     - title: github
       url: https://github.com/tanngoc93
     - title: linkedin
-      url: www.linkedin.com/in/tanngoc93
+      url: https://www.linkedin.com/in/tanngoc93
     - title: facebook
       url: https://www.facebook.com/ngoc.nguyen.tan.551979
 
